@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.openeuler</groupId>
         <artifactId>gmssl</artifactId>
-        <version>2.0.0</version>
+        <version>2.0.1</version>
     </parent>
 
     <artifactId>tomcat-adaptor</artifactId>
@@ -62,6 +62,34 @@
 
     <profiles>
         <profile>
+            <id>jdk21-tests</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <jvm>${jdk21.home}</jvm>
+                            <argLine>
+                                --add-exports=java.base/sun.security.x509=ALL-UNNAMED
+                                --add-exports=java.base/sun.security.action=ALL-UNNAMED
+                                --add-opens=java.base/sun.security.util=ALL-UNNAMED
+                                --add-exports=java.base/sun.security.pkcs=ALL-UNNAMED
+                                --add-exports=java.base/jdk.internal.access=ALL-UNNAMED
+                                --add-exports=java.base/sun.net.util=ALL-UNNAMED
+                                --add-exports=java.base/sun.security.internal.spec=ALL-UNNAMED
+                                --add-opens=java.base/javax.crypto=ALL-UNNAMED
+                                --add-opens=java.base/sun.security.pkcs12=ALL-UNNAMED
+                                --add-opens=java.base/java.nio=ALL-UNNAMED
+                                --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
+                                --add-exports=java.base/sun.security.jca=ALL-UNNAMED
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>jdk21</id>
             <activation>
                 <jdk>21</jdk>
@@ -114,6 +142,7 @@
                 <argLine>
                     --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
                     --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
+                    --add-exports=java.base/jdk.internal.access=ALL-UNNAMED
                 </argLine>
             </properties>
         </profile>
